--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 
       const controller = { w: false, a: false, s: false, d: false };
 
+      const map = [];
+
+      const MAP_H = 30;
+      const MAP_W = 30;
+      const TILE_W = 32;
+
       document.addEventListener("keydown", (e) => {
         switch (e.keyCode) {
           case 87:
@@ -69,9 +75,47 @@
         }
       }
 
+      function renderMap() {
+        for (let i = 0; i < map.length; i++) {
+          for (let j = 0; j < map[i].length; j++) {
+            if (map[i][j] === 0) {
+              context.fillStyle = "#efefef";
+              context.fillRect(i * TILE_W, j * TILE_W, TILE_W, TILE_W);
+              context.fillStyle = "#fff";
+              context.fillRect(
+                i * TILE_W + 1,
+                j * TILE_W + 1,
+                TILE_W - 1,
+                TILE_W - 1
+              );
+            } else if (map[i][j] === 1) {
+              context.fillStyle = "#44ee44";
+              context.fillRect(i * TILE_W, j * TILE_W, TILE_W, TILE_W);
+              context.fillStyle = "#88ff88";
+              context.fillRect(i * TILE_W, j * TILE_W - 8, TILE_W, TILE_W / 2);
+            }
+          }
+        }
+      }
+
       function render() {
         context.clearRect(0, 0, canvas.width, canvas.height);
+        renderMap();
         renderPlayer();
+      }
+
+      function initMap() {
+        for (let i = 0; i < MAP_H; i++) {
+          map.push([]);
+          for (let j = 0; j < MAP_W; j++) {
+            let tileValue = 0;
+            const randValue = Math.floor(Math.random() * 10);
+            if (randValue > 8) {
+              tileValue = 1;
+            }
+            map[i].push(tileValue);
+          }
+        }
       }
 
       function run() {
@@ -80,6 +124,7 @@
         setTimeout(run, 1000 / 60);
       }
 
+      initMap();
       run();
     </script>
   </body>
